# ucas-ml

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/: __init__.py
app/classifier/: __init__.py  base.py  lstm.py  tinyllm.py  transformer.py  transformers.py
app/dataloader/: __init__.py  dataset.py  transform.py
app/tokenizer/: autotokenizer.py
app/trainer/: trainer.py
app/webui/: app.py
ckpts/model/: README.md
ckpts/tinyllm/tokenizer/owt-32000/: vocab.json
ckpts/tinyllm/tokenizer/tiny-stories-10000/: vocab.json
ckpts/tokenizer/movie-review-5000/: merges.json  vocab.json
ckpts/tokenizer/owt-32000/: merges.json
docs/: report.typ  slide.typ
docs/src/: analysis.typ  appendix.typ  bib.typ  data.typ  demo.typ  exp.typ  exp_nn.typ  exp_trad.typ  main.typ  meta.typ  model_nn.typ  model_trad.typ  model_trainer.typ  preprocess.typ  vectorize.typ
docs/src/assets/: works.bib
docs/src/assets/kaggle/: README.md
scripts/: dump_corpus.py  train.py  train_traditional.py
tinyllm/: CMakeLists.txt  README.md  __init__.py  cpp_extensions.pyi  pyproject.toml
tinyllm/cpp/: bpe.hpp  export.cpp
tinyllm/network/: __init__.py  functional.py  layers.py  models.py
tinyllm/optimize/: __init__.py
tinyllm/scripts/: inference.py  pretokenize.py  test_sgd.py  test_tokenizer.py  tokenize.py  train.py
tinyllm/tests/: adapters.py  conftest.py  test_ckpt.py  test_llm.py  test_tar_llm.py  test_tokenize.py  test_tokenizer.py  utils.py
tinyllm/tinyllm/cpp/: bpe.hpp
tinyllm/tinyllm/cpp/utils/: thread.hpp
tinyllm/tinyllm/network/: functional.py  layers.py  models.py  multiplatform.py
tinyllm/tinyllm/optimize/: __init__.py  functional.py  lr_scheduler.py  optimizers.py
tinyllm/tinyllm/tests/: test_bpe.py  test_cppext.py  test_embed.py  test_model.py  test_padding.py  test_tokenize.py
tinyllm/tinyllm/tokenize/: tokenizer.py
tinyllm/tinyllm/train/: checkpoint.py  dataset.py  train.py
tinyllm/tokenize/: __init__.py  pretokenizer.py
tinyllm/train/: __init__.py  checkpoint.py
