[project]
name = "ucas-ml"
version = "1.0.0"
description = "Project of UCAS Machine Learning '25"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1", # tensor operations
    "einx>=0.3.0", # more general tensor operations
    "jaxtyping>=0.3.0", # type hints for pytorch/jax/numpy
    "numpy<2.0.0; sys_platform != 'darwin' and platform_machine != 'x86_64'",
    "numpy; sys_platform == 'darwin' or platform_machine == 'x86_64'",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6", # more powerful regex than the builtin `re` module
    "submitit>=1.5.2", # job submission for SLURM
    "tiktoken>=0.9.0",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "torch~=2.6.0; sys_platform == 'darwin' and platform_machine == 'arm64'", # Apple Silicon Macs
    "torch~=2.8.0; sys_platform != 'darwin' and platform_machine == 'x86_64'", # Non-macOS platforms
    "torch~=2.5.0; sys_platform != 'darwin' and platform_machine != 'x86_64'",
    "torch_npu~=2.5.0; sys_platform != 'darwin' and platform_machine != 'x86_64'",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "bidict>=0.23.1",
    "scalene>=1.5.51",
    "loguru>=0.7.3",
    "decorator>=5.2.1",
    "scipy>=1.15.3",
    "attrs>=25.3.0",
    "tensorboard>=2.20.0",
    "termcolor>=3.1.0",
    "questionary>=2.1.1",
    "pandas>=2.3.3",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.setuptools.packages.find]
include = ["tinygpt"]


[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"


[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]
