[project]
name = "ucas-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "hf-xet>=1.2.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "scikit-learn==1.7.2",
    "tinyllm",
    "torch>=2.2.2",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.uv.sources]
tinyllm = { path = "tinyllm", editable = true }

[tool.uv]
package = true
python-preference = "managed"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]
